@@ -55,7 +55,7 @@
         // Some important vars
         var is_upload_finished = false;
         var entity_id = {{ entity.id }};
-        var link_id = -1;
+        var link_ids = [];
         
         // ********************************************************************
         // Form
@@ -82,18 +82,18 @@
             multiple: false,
             uploadOnSelect: true,
             enctype: 'multipart/form-data',
-            url: 'upload_file',
+            url: 'upload_files',
             onBegin: function(data){
                 // reset data
                 is_upload_finished = false;
-                link_id = -1;
+                link_ids = [];
             },
             onComplete: function(data){
                 // store the link.id
                 console.debug(data);
                 is_upload_finished = true;
-                link_id = data.link_id;
-                console.debug('link_id :', link_id);
+                link_ids = data.link_ids;
+                console.debug('link_ids :', link_ids);
             }
         }, 'thumbnail');
         thumbnail_uploader.startup();
@@ -109,16 +109,16 @@
             label: 'OK',
             type: 'button',
             onClick: function () {
-                if (is_upload_finished && link_id != -1){
+                if (is_upload_finished && link_ids.length != 0){
                     console.debug('is_upload_finished : ', is_upload_finished);
-                    console.debug('link_id            : ', link_id);
+                    console.debug('link_ids           : ', link_ids);
                     console.debug('dialog             : ', dialog);
                     submitForm({
                         dialog: dialog,
                         form: upload_thumbnail_form,
                         additional_data: {
                             entity_id: entity_id,
-                            link_id: link_id
+                            link_ids: link_ids
                         },
                         url: '{{ request.route_url('assign_thumbnail') }}',
                         method: 'POST'
